[package]
name = "affine-day"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }
bevy = { version = "0.14.0", features = [
    "file_watcher",
    "basis-universal",
    "zlib",
    "ktx2",
    "jpeg",
    "exr",

] }
bevy-inspector-egui = "0.25.1"
bevy_editor_cam = "0.3.1"
bevy_mod_picking = "0.20.1"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
